- switcher improvement;  - fix charts displaying bug on Safari.

--- a/src/scenes/Main/components/Chart/Chart.scss
+++ b/src/scenes/Main/components/Chart/Chart.scss
@@ -11,13 +11,20 @@
   flex-shrink: 0;
 
   .chart__title {
-    @include sizing('font-size', (320px: 13px, 1920px: 20px));
+    @include sizing('font-size', (320px: 14px, 1920px: 22px));
     margin: 0 0 25px 0;
+    font-weight: normal;
   }
 
   .chart__content {
+    flex-grow: 1;
     display: flex;
+    flex-direction: column;
     height: 100%;
+
+    .recharts-responsive-container {
+      flex-grow: 1;
+    }
   }
 
   text {
